devops-train/kubernetes/v3_load-balancer/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sample-ds
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
