devops-train/kubernetes/v3_load-balancer/pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
    name: env-pod
spec:
    restartPolicy: Never
    containers:
    - name: env-container
      image: ubuntu:latest
      command: ["env"]
