devops-train/kubernetes/v3_load-balancer/simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
  namespace: default
  labels:
    app: simple-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - image: yeasy/simple-web
        name: simple-web
---
apiVersion: v1
kind: Service
metadata:
  name: simple-web
  labels:
    app: simple-web
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: simple-web
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web
spec:
  ingressClassName: "nginx"
  rules:
  - host: kadannr.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
                name: simple-web
                port:
                    name: http
