devops-train/kubernetes/v3_load-balancer/simple_issuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-web
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - kadannr.online
      secretName: subdomain-radost-ru-tls
  ingressClassName: "nginx"
  rules:
  - host: kadannr.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
                name: simple-web
                port:
                    name: http
